tests/integration/fail/metavalue_contract_default.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::BlameError'
{ val | default | Number = true }.val
